# simple-vector-tiles

./: .env  .gitignore  Makefile  README.md  compose.yml  mapping.yaml  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
apps/api/: Dockerfile  requirements.txt
apps/api/res/style/: openmaptiles.json  style-header.json
apps/api/src/: config.py  db.py  main.py
apps/api/src/openmaptiles/: diagram.py  imposm.py  mbtile_tools.py  performance.py  perfutils.py  pgutils.py  postserve.py  sql.py  sqltomvt.py  styleutils.py  tileset.py  tmsource.py  utils.py  vector_tile.py
apps/api/src/routers/: static.py  tiles.py
apps/api/src/utils/responses/: __init__.py  file.py
apps/ui/: index.html
scripts/: import-sql.sh
