[tool.poetry]
name = "vector-tile-server"
version = "0.1.0"
description = "FastAPI-based server to generate vector tiles from PostGIS"
authors = ["Brednden King brendenking17@outlook.com"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.4"
pytest = "^8.2.1"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
